# docs-prg-design

./: AUTHORING.md  README.md  build.sh  create.sh  deploy  main.py  pyproject.toml  serve  serve.sh  setup  setup.sh
.github/workflows/: protect-master.yml
base/: mkdocs.yml
docs/: 404.html  index.html  search.html  sitemap.xml
docs/python/resources/python-edison-intro/: index.html
docs/python/resources/python-variables/: index.html
docs/python/tasks/task-1-intro-to-edison/: index.html
docs/python/tasks/task-2-variables/: index.html
docs/python/tasks/task-3-functions/: index.html
docs/python/tasks/task-4-functions-params-returns/: index.html
docs/python/tasks/task-5-event-loop/: index.html
docs/python/tasks/task-6-selection/: index.html
docs/python/tasks/task-9-lists/: index.html
docs/search/: search_index.json
output/: index.html
output/design/: 404.html  index.html  sitemap.xml
output/htmlcss/: 404.html  index.html
output/microbit/: 404.html  index.html
output/nextjs/: 404.html  index.html
output/portal/: 404.html  index.html  sitemap.xml
output/portal/cert-iii-it/: index.html
output/portal/diploma-it/: index.html
output/portal/search/: search_index.json
output/python-edison/: 404.html  index.html  sitemap.xml
sites/design/: mkdocs.yml
sites/htmlcss/: mkdocs.yml
sites/microbit/: mkdocs.yml
sites/microbit/docs/: index.md
sites/nextjs/: mkdocs.yml
sites/nextjs/docs/: index.md
sites/portal/: mkdocs.yml
sites/portal/docs/: index.md
sites/python-edison/: mkdocs.yml
src/: mkdocs.yml
src/docs/extra/: style.css
(+99 files in other folders)
